# nix-tree-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
benches/: scroll.rs
docs/: demo.tape  render-demo.sh
examples/: snapshot.rs
src/: cli.rs  clipboard.rs  diff.rs  dot.rs  lib.rs  main.rs  nix.rs  path_stats.rs  store_path.rs
src/ui/: app.rs  mod.rs  pane.rs  widgets.rs
tests/: cli.rs  integration.rs  ui_test.rs
tests/fixtures/: closures.nix
